@@ -10,6 +10,7 @@
 #include "hppCorbaServer/hppciObstacle.h"
 #include "hppCorbaServer/hppciProblem.h"
 #include "hppCorbaServer/hppciServerPrivate.h"
+#include "hppciExceptionHandlingMacros.h"
 
 ChppciServerPrivate::~ChppciServerPrivate()
 {
@@ -21,15 +22,40 @@ ChppciServerPrivate::~ChppciServerPrivate()
   obstacleServantid = NULL;
 }
 
-void ChppciServerPrivate::createAndActivateServers(ChppciServer* inHppciServer)
+ktStatus ChppciServerPrivate::createAndActivateServers(ChppciServer* inHppciServer)
 {
-  robotServant = new ChppciRobot_impl(inHppciServer);
-  obstacleServant = new ChppciObstacle_impl(inHppciServer);
-  problemServant = new ChppciProblem_impl(inHppciServer);
-  
-  robotServantid = poa->activate_object(robotServant);
-  obstacleServantid = poa->activate_object(obstacleServant);
-  problemServantid = poa->activate_object(problemServant);
+  try {
+    robotServant = new ChppciRobot_impl(inHppciServer);
+  }
+  HPPCI_CATCH("failed to create implementation of ChppciRobot", KD_ERROR) /* see hppciExceptionHandlingMacros.h */
+
+  try {
+    obstacleServant = new ChppciObstacle_impl(inHppciServer);
+  }
+  HPPCI_CATCH("failed to create implementation of ChppciObstacle", KD_ERROR) /* see hppciExceptionHandlingMacros.h */
+
+  try {
+    problemServant = new ChppciProblem_impl(inHppciServer);
+  }
+  HPPCI_CATCH("failed to create implementation of ChppciProblem", KD_ERROR) /* see hppciExceptionHandlingMacros.h */
+
+  try {
+    
+    robotServantid = poa->activate_object(robotServant);
+  }
+  HPPCI_CATCH("failed to activate implementation of ChppciRobot", KD_ERROR) /* see hppciExceptionHandlingMacros.h */
+
+  try {
+    obstacleServantid = poa->activate_object(obstacleServant);
+  }
+  HPPCI_CATCH("failed to activate implementation of ChppciObstacle", KD_ERROR) /* see hppciExceptionHandlingMacros.h */
+
+  try {
+    problemServantid = poa->activate_object(problemServant);
+  }
+  HPPCI_CATCH("failed to activate implementation of ChppciProblem", KD_ERROR) /* see hppciExceptionHandlingMacros.h */
+
+  return KD_OK;
 }
 
 void ChppciServerPrivate::deactivateAndDestroyServers()
@@ -53,32 +79,36 @@ void ChppciServerPrivate::deactivateAndDestroyServers()
 
 
 
-CORBA::Boolean ChppciServerPrivate::createHppContext()
+bool ChppciServerPrivate::createHppContext()
 {
   CosNaming::NamingContext_var rootContext;
+  CORBA::Object_var localObj;
+  CosNaming::Name contextName;
 
   try {
     // Obtain a reference to the root context of the Name service:
-    CORBA::Object_var localObj;
     localObj = orb->resolve_initial_references("NameService");
+  }
+  HPPCI_CATCH("failed to get the name service", false);
 
+  try {
     // Narrow the reference returned.
     rootContext = CosNaming::NamingContext::_narrow(localObj);
     if( CORBA::is_nil(rootContext) ) {
       std::cerr << "Failed to narrow the root naming context." << std::endl;
-      return 0;
+      return false;
     }
   }
   catch(CORBA::ORB::InvalidName& ex) {
     // This should not happen!
     std::cerr << "Service required is invalid [does not exist]." << std::endl;
-    return 0;
+    return false;
   }
+  HPPCI_CATCH("failed to narrow the root naming context.", false);
 
   try {
     // Bind a context called "hpp" to the root context:
 
-    CosNaming::Name contextName;
     contextName.length(1);
     contextName[0].id   = (const char*) "hpp";       // string copied
     contextName[0].kind = (const char*) "my_context"; // string copied
@@ -99,33 +129,33 @@ CORBA::Boolean ChppciServerPrivate::createHppContext()
       hppContext = CosNaming::NamingContext::_narrow(localObj);
       if( CORBA::is_nil(hppContext) ) {
         std::cerr << "Failed to narrow naming context." << std::endl;
-        return 0;
+        return false;
       }
     }
   }
   catch(CORBA::COMM_FAILURE& ex) {
     std::cerr << "Caught system exception COMM_FAILURE -- unable to contact the "
          << "naming service." << std::endl;
-    return 0;
+    return false;
   }
   catch(CORBA::SystemException&) {
-    std::cerr << "Caught a CORBA::SystemException while using the naming service."
+    std::cerr << "Caught a CORBA::SystemException while creating the context."
 	 << std::endl;
-    return 0;
+    return false;
   }
 
-  return 1;
+  return true;
 }
 
-CORBA::Boolean
-ChppciServerPrivate::bindObjectToName(CORBA::Object_ptr objref,
-			       CosNaming::Name objectName)
+bool ChppciServerPrivate::bindObjectToName(CORBA::Object_ptr objref,
+					   CosNaming::Name objectName)
 {
   try {
     try {
       hppContext->bind(objectName, objref);
     }
     catch(CosNaming::NamingContext::AlreadyBound& ex) {
+      std::cerr << "Warning naming context already bound" << std::endl;
       hppContext->rebind(objectName, objref);
     }
     // Note: Using rebind() will overwrite any Object previously bound
@@ -142,13 +172,13 @@ ChppciServerPrivate::bindObjectToName(CORBA::Object_ptr objref,
   catch(CORBA::COMM_FAILURE& ex) {
     std::cerr << "Caught system exception COMM_FAILURE -- unable to contact the "
          << "naming service." << std::endl;
-    return 0;
+    return false;
   }
   catch(CORBA::SystemException&) {
-    std::cerr << "Caught a CORBA::SystemException while using the naming service."
+    std::cerr << "Caught a CORBA::SystemException while binding object to name service."
 	 << std::endl;
-    return 0;
+    return false;
   }
 
-  return 1;
+  return true;
 }
